# presage

./: .gitignore  Cargo.toml  NOTES.md  README.md  rustfmt.toml
.github/workflows/: build.yml
.sqlx/: query-52df9cb41819ce944b81e084c032b961924d67027f2c7ba33d8068de0dad1143.json  query-9de7ea56fe6a1c39ea6a85e24d0d7cfcc20b38220e873e7358fd2de98b8772cb.json
libsignal-service-rs/src/: cipher.rs
presage-cli/: Cargo.toml
presage-cli/src/: main.rs
presage-store-sqlite/: Cargo.toml
presage-store-sqlite/src/: content.rs  lib.rs
presage/src/manager/: confirmation.rs  registered.rs
