# cargo-features = ["edition2024"]
# [package]
# name = "presage-cli"

# Quest for binary < 10 Mb!!!
# See: ttps://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"  # Optimize for size.  "s" isn't quite as small
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = ["presage", "presage-cli", "presage-store-sled", "presage-store-cipher", "presage-store-sqlite"]
resolver = "2"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
quickcheck_async = { git = 'https://github.com/nytopop/quickcheck_async', rev = '76b13525ca93e0725e757f841fc6ccab8bae1913' }

# [patch."https://github.com/whisperfish/libsignal-service-rs.git"]
# libsignal-service = { path = "../libsignal-service-rs" }
