[package]
name = "presage-cli"
version = "0.8.0-dev"
edition = "2021"
authors = ["Gabriel Féron <g@leirbag.net>"]
license = "AGPL-3.0-only"

[features]
# Slim default: only what hotline-lite actually invokes. Build with
# `--features extras` to compile linking, contact/message listing, etc.
default = []
extras = ["dep:qr2term"]
cdsi = ["presage/cdsi"]

[dependencies]
# Default CDSI off — pulls in libsignal-net (~2 MB) which puts us over Twilio's
# 10 MB asset limit. Re-enable for local use via `--features cdsi`.
presage = { path = "../presage", default-features = false }
presage-store-sqlite = { path = "../presage-store-sqlite" }

anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = ">=4.2.4", features = ["derive"] }
directories = "6.0"
futures = "0.3"
hex = "0.4"
mime_guess = "2.0"
qr2term = { version = "0.3.1", optional = true }
serde_json = "1.0"
tempfile = "3.9"
tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
