[package]
name = "presage-store-sqlite"
version = "0.8.0-dev"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["cdsi"]
cdsi = ["presage/cdsi"]

[dependencies]
presage = { path = "../presage", default-features = false }

async-trait = "0.1.83"
bytes = "1.9.0"
chrono = "0.4.38"
prost = "0.13.4"
serde_json = "1.0.135"
# v0.8.6 with one unreleased patch to relax the version requirement for libsqlite3-sys
sqlx = { version = "0.8.6", git = "https://github.com/gferon/sqlx", rev = "53c3a26c1b484175f3beb21853a1061b488bf7af", features = ["json", "sqlite", "uuid", "runtime-tokio"] }
thiserror = "2.0.0"
tracing = "0.1.41"
uuid = "1.12.0"

# Plain bundled SQLite — SQLCipher was dropped because the encrypted-at-rest
# property is now provided by the storage backend (Twilio Sync) rather than the
# DB file itself, and bundling SQLCipher's crypto layer added ~1 MB to every
# build that uses this crate. Re-enable `bundled-sqlcipher-custom-crypto` if you
# need on-disk encryption.
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
rand = "0.9"
